<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AboutActivity"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/profile_img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:text="@string/my_name" />
        <TextView
            android:text="@string/title_about"
            android:textColor="@android:color/black"
            android:textSize="23sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/contact_me"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>

