<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_stadium_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stadium_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_stadium"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/stadium_name"/>

        </LinearLayout>

        <TextView
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_item_description"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/team"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_team"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/capacity"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_capacity"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/share" />
    </LinearLayout>

</ScrollView>